# libassuan

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.rc  autogen.sh  build-w32.sh  configure.ac  ltmain.sh
build-aux/: libtool-patch.sed  texinfo.tex
contrib/: ChangeLog
contrib/conf-w32ce-msc/: build.mk  config.h
doc/: ChangeLog  HACKING  Makefile.am  README.apichanges  assuan.texi  gpl.texi
m4/: Makefile.am  gnupg-pth.m4  libtool.m4
src/: ChangeLog  Makefile.am  assuan-buffer.c  assuan-client.c  assuan-connect.c  assuan-defs.h  assuan-domain-connect.c  assuan-domain-server.c  assuan-error.c  assuan-handler.c  assuan-inquire.c  assuan-io-pth.c  assuan-io.c  assuan-listen.c  assuan-logging.c  assuan-pipe-connect.c  assuan-pipe-server.c  assuan-socket-connect.c  assuan-socket-server.c  assuan-socket.c  assuan-uds.c  assuan-util.c  assuan.c  assuan.h  assuan.h.in  client.c  context.c  conversion.c  debug.c  debug.h  funopen.c  gpgcedev.c  gpgcedev.def  gpgcemgr.c  isascii.c  libassuan-config.in  libassuan.def  libassuan.m4  libassuan.pc.in  libassuan.vers  (+26 more)
tests/: ChangeLog  Makefile.am  ce-createpipe.c  ce-server.c  common.h  fdpassing-socket.c  fdpassing-socket.sh  fdpassing.c  pipeconnect.c  socks5.c  version.c
